Remove mustache, update templates and controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,18 @@
-spring.mustache.suffix=.html
-spring.mustache.enabled=true
-
 spring.thymeleaf.enabled=true
+
+spring.mustache.enabled=false
+
+spring.main.allow-bean-definition-overriding=true
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.username=user
 spring.datasource.password=userPass1092
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
 
 spring.jpa.properties.hibernate.format_sql=true
 
-
-
+server.error.path=/error
+server.error.whitelabel.enabled=false
