--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,14 @@ spring.main.allow-bean-definition-overriding=true
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.auto-commit=true
 spring.datasource.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.username=user
 spring.datasource.password=userPass1092
 
-spring.jpa.properties.hibernate.format_sql=true
+spring.data.jpa.repositories.enabled=true
 
-server.error.path=/error
-server.error.whitelabel.enabled=false
+server.error.whitelabel.enabled=true
