--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,13 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.auto-commit=true
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
-spring.datasource.username=user
-spring.datasource.password=userPass1092
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo
+spring.datasource.username=postgres
+spring.datasource.password=1029384756
 
 spring.data.jpa.repositories.enabled=true
 
